working with action cable webpack

--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -6,19 +6,19 @@
   <div class="twelve wide column">
     <div class="ui fluid raised card chatbox">
       <div class="content">
-        <div class="ui feed">
+        <div class="ui feed" id="message-container">
          <%= render @messages %>
           </div>
         </div>
         <div class="extra content">
-          <form class="ui reply form">
+        <%= form_for(@message, html: {class: "ui reply form", role: "form"}, url: message_path) do |f| %>
             <div class="field">
             <div class="ui fluid icon input ">
-              <input type="text" placeholder="Enter Message">
-              <i class="bordered inverted orange icon edit"></i> 
+            <%= f.text_field :body %>
+              <%= f.button '<i class="bordered inverted orange icon edit"></i>'.html_safe %>
             </div>
             </div>
-          </form>
+          <% end %>
         </div>
       </div>
     </div>
