--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,10 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     
-
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
+  
 
 <body>
   <div class="ui small inverted menu">
@@ -19,7 +19,9 @@
     </div>
   </div>
   <div class="ui container">
+    <%= render 'layouts/messages' %>
     <%= yield %>
   </div>
+  
 </body>
 </html>
