--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -5,13 +5,15 @@
 <div class="ui two column grid">
   <div class="twelve wide column">
     <div class="ui fluid raised card chatbox">
-      <div class="content">
+      <div class="content" id="messages">
         <div class="ui feed" id="message-container">
          <%= render @messages %>
           </div>
         </div>
         <div class="extra content">
-        <%= form_for(@message, html: {class: "ui reply form", role: "form"}, url: message_path) do |f| %>
+       
+        <%= form_for(@message, html: {class: "ui reply form", role: "form"}, url: message_path, remote: true) do |f| %>
+        <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
             <div class="field">
             <div class="ui fluid icon input ">
             <%= f.text_field :body %>
